--- a/agegroupcalculator.html
+++ b/agegroupcalculator.html
@@ -108,9 +108,10 @@
             </tr>
             <tr>
                 <td style="text-align: center;">U14</td>
-                <td style="text-align: center;">August 1, 2011 - July 31, 2013</td>
+                <td style="text-align: center;">August 1, 2011* - July 31, 2013</td>
             </tr>
         </table>
+        <p>*If 14 years old, player must be in the 8h grade!</p>
     </div>
 
     <script>
