--- a/agegroupcalculator.html
+++ b/agegroupcalculator.html
@@ -111,7 +111,7 @@
                 <td style="text-align: center;">August 1, 2011* - July 31, 2013</td>
             </tr>
         </table>
-        <p>*If 14 years old, player must be in the 8h grade!</p>
+        <p>*If 14 years old, player must be in the 8th grade!</p>
     </div>
 
     <script>
